jobs/cf_lyric_recommender/builds/1/log
Started by user [8mha:////4AvbKtqCpWGC4/9vlaAOyQD+y56HOfLOpPpkD7K9YRsAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Running as SYSTEM
Building in workspace /var/root/.jenkins/workspace/cf_lyric_recommender
[cf_lyric_recommender] $ /bin/sh -xe /var/folders/zz/zyxvpxvq6csfxvn_n0000000000000/T/jenkins4878261983855900598.sh
+ cd /Users/kashifu/honyu-tmp/kirinBrain/lyric_recommender
+ python run_cf.py
Traceback (most recent call last):
  File "run_cf.py", line 1, in <module>
    from collaborative_filtering import MemoryBasedCF
  File "/Users/kashifu/honyu-tmp/kirinBrain/lyric_recommender/collaborative_filtering.py", line 7
    def __init__(self, loader: LyricLoader = None):
                             ^
SyntaxError: invalid syntax
Build step 'Execute shell' marked build as failure
Finished: FAILURE
